--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=student_service_db
 
-DATABASE_URL=your_supabase_connection_string
+DATABASE_URL=postgresql://postgres:[RomeoGene1313]@aws-0-sa-east-1.pooler.supabase.com:5432/postgres
 JWT_SECRET=your_secret_key
 PORT=5000
