Updated database configuration

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ DB_PORT=5432
 DB_DATABASE=student_service_db
 
 DATABASE_URL=postgresql://postgres:[RomeoGene1313]@aws-0-sa-east-1.pooler.supabase.com:5432/postgres
-JWT_SECRET=your_secret_key
+JWT_SECRET= hellohellohello
 PORT=5000
