--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
+  
+  
+
   "name": "backend",
   "version": "1.0.0",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "engines": {
-    "node": ">=14.0.0"
-  },
+ "scripts": {
+      "start": "node server.js",
+      "build": "npm install",
+      "postinstall": "npm rebuild bcrypt --build-from-source"
+    },
+    "engines": {
+      "node": "18.x"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
