--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=student_service_db
 
-DATABASE_URL=postgresql://postgres:[RomeoGene1313]@aws-0-sa-east-1.pooler.supabase.com:5432/postgres
+DATABASE_URL=postgresql://postgres.qlcyqicoktfuicwocweh:SupabaseSecurePassw0rd@aws-0-ap-south-1.pooler.supabase.com:6543/postgres
 JWT_SECRET= hellohellohello
 PORT=5000
